--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.9",
-    "@react-navigation/bottom-tabs": "^5.2.7",
+    "@react-navigation/material-top-tabs": "^5.1.10",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "react": "16.11.0",
@@ -21,6 +21,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
