--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@react-navigation/material-top-tabs": "^5.1.10",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
-    "moment": "^2.25.1",
+    "moment": "^2.25.3",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-floating-action": "^1.20.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "^1.8.0",
