--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "moment": "^2.25.3",
     "react": "16.11.0",
     "react-native": "0.62.2",
-    "react-native-floating-action": "^1.20.0",
+    "react-native-circular-progress": "^1.3.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0"
   },
