--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "moment": "^2.25.3",
+    "mqtt": "^4.0.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-circular-progress": "^1.3.6",
