--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-circular-progress": "^1.3.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.8.0",
+    "react-native-push-notification": "^3.4.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
