--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -130,10 +130,11 @@ android {
 
     defaultConfig {
         applicationId "com.wegrow"
-        minSdkVersion rootProject.ext.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        missingDimensionStrategy 'react-native-camera', 'general'
     }
     splits {
         abi {
