--- a/ios/Podfile
+++ b/ios/Podfile
@@ -81,6 +81,10 @@ target 'WeGrow' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
+  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
+
   target 'WeGrowTests' do
     inherit! :complete
     # Pods for testing
