--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "mqtt": "^4.0.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-camera": "^3.26.0",
     "react-native-circular-progress": "^1.3.6",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^2.3.1",
     "react-native-paper": "^3.8.0",
+    "react-native-permissions": "^2.1.5",
     "react-native-push-notification": "^3.4.0",
+    "react-native-qrcode-scanner": "^1.4.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
